<resources>
    <string name="app_name">Personal Management</string>
    <string name="action_settings">Settings</string>
    <string name="app_permission_denied">Permission is denied to read your External Storage</string>
    <string name="welcome_personal_management">Welcome to\n Personal Management</string>
    <string name="reminder_tab">Reminder</string>
    <string name="budget_button">Budget</string>
    <string name="payment_button">Payment</string>
    <string name="place_button">Place</string>
    <string name="note_button">Note</string>
    <string name="dictionary_button">Dictionary</string>
    <string name="title_activity_budget">Budget</string>
    <string name="all_budget_tab">All</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="empty_value_error">ERROR: Empty value !!!</string>
    <string-array name="month_dropdown_items">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_payment">Payment</string>
    <string name="default_amount_cb">Default Amount</string>
    <string name="custom_amount_cb">Custom Amount</string>
    <string name="new_payment">New Payment...</string>
    <string name="pay">Pay</string>
    <string name="there_is_no_place">There is no place</string>
    <string name="date_label">Date:</string>
    <string name="amount_lable">Amount:</string>
    <string name="to_lable">To:</string>
    <string name="total_amount_label">Total($):</string>
    <string name="default_amount_label">Default($):</string>
    <string name="home_menu_users">Users</string>
    <string name="home_menu_export">Export</string>
    <string name="home_menu_import">Import</string>
    <string name="home_menu_share">Share</string>
    <string name="share_using_title">Share using: </string>
    <string name="title_activity_place">Place</string>
    <string name="place_name">Name:</string>
    <string name="place_address">Address:</string>
    <string name="home">Home</string>
    <string name="payment_paid_title">PAID:</string>
    <string name="payment_details_title">DETAILS:</string>
    <string name="note_title">Title:</string>
    <string name="note_content">Content:</string>
    <string name="title_activity_note">Note</string>
    <string name="delete">Delete</string>
    <string name="budget_delete_by_year_title"> Delete By Year</string>
    <string name="title_activity_dictionary">New Words</string>
    <string name="existed_word_error_dialog_title">Existed Word!</string>
    <string name="existed_word_error_dialog_message">The \'%s\' is existed. Please, try to add another word </string>
    <string name="ok">OK</string>
    <string name="search_word_hint">Search word by keyword</string>
    <string name="users_list_dialog_title_text">Users List</string>
    <string name="are_user_sure_title">Are your sure?</string>
    <string name="delete_alert_message">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
