<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu_users_btn"
        android:title="@string/home_menu_users" />
    <item
        android:id="@+id/home_menu_export_btn"
        android:title="@string/home_menu_export" />
    <item
        android:id="@+id/home_menu_import_btn"
        android:title="@string/home_menu_import" />
    <item
        android:id="@+id/home_menu_share_btn"
        android:title="@string/home_menu_share" />
    <item
        android:id="@+id/user_edit_btn"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/user_delete_btn"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>
