<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BudgetActivity"
    tools:showIn="@layout/activity_budget"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/monthly_total_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Spinner
                android:id="@+id/month_dropdown"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <Spinner
                android:id="@+id/year_dropdown"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="10"
            android:background="@drawable/custom_boder_budget_tab"
            android:orientation="horizontal">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/budget_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabSelectedTextColor="@android:color/holo_blue_bright">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/all_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:text="@string/all_budget_tab" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/deposit_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/withdraw_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw" />

            </com.google.android.material.tabs.TabLayout>

        </LinearLayout>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/record_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="89"
        android:background="@color/transparentColor"
        android:divider="@color/viewDataCellBorder"
        android:dividerHeight="1dp"
        android:listSelector="@android:color/darker_gray"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

</LinearLayout>

